<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">DashClock Date Extension</string>
  <string name="extension_label">Date</string>
  <string name="extension_description">Displays your current date</string>
  <string name="action_settings">Settings</string>

  <string name="extension_settings_title">Date Settings</string>
  <string name="pref_click_intent_shortcut_title">Shortcut</string>
  <string name="pref_short_date_format_title">Short date format</string>
  <string name="pref_long_date_format_title">Long date format</string>
  <string name="pref_use_custom_date_formats_title">Use custom date formats?</string>
  <string name="invalid_date_pattern_message">Invalid date format!</string>
</resources>